[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Games/up-down_game.gd" type="Script" id=1]
[ext_resource path="res://Meshes/Watermelon.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Textures/Watermelon_02.png" type="Texture" id=3]
[ext_resource path="res://Textures/Watermelon_01.png" type="Texture" id=4]
[ext_resource path="res://Meshes/toon_hand_palm.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Meshes/balloon_scene.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Actors/Target.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Textures/wood.jpg" type="Texture" id=9]
[ext_resource path="res://Textures/wood_height.jpg" type="Texture" id=10]
[ext_resource path="res://Textures/wood_normal.png" type="Texture" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 5, 1.5 )

[sub_resource type="RayShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource( 3 )
roughness = 0.0

[sub_resource type="SpatialMaterial" id=4]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource( 4 )
roughness = 0.0

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.745098, 0.6, 0.321569, 1 )
albedo_texture = ExtResource( 9 )
metallic_specular = 0.0
metallic_texture = ExtResource( 10 )
roughness = 0.7
roughness_texture = ExtResource( 10 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 11 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 10 )
ao_on_uv2 = false
ao_texture_channel = 0
uv1_scale = Vector3( 8, 8, 8 )

[sub_resource type="ProceduralSky" id=7]
sky_top_color = Color( 0.339844, 1, 0.969055, 1 )
sky_horizon_color = Color( 0.400238, 0.633779, 0.839844, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
sun_energy = 16.0

[sub_resource type="Environment" id=8]
background_mode = 3
background_sky = SubResource( 7 )
background_color = Color( 0.771286, 0.958497, 0.972656, 1 )
ambient_light_color = Color( 0.707031, 0.979401, 1, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="GameSpace" type="Area" parent="."]
input_ray_pickable = false
collision_layer = 2
collision_mask = 2

[node name="Boundaries" type="CollisionShape" parent="GameSpace"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.5, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="GameSpace/Boundaries"]
transform = Transform( 3.37508e-14, 1.63913e-07, 1, 1, -1.62921e-07, 9.90028e-14, 1.62921e-07, 1, -1.63913e-07, 3.72529e-09, 0, -0.094836 )
cast_to = Vector3( 0, -3, 0 )
collision_mask = 2

[node name="Player" type="RigidBody" parent="GameSpace/Boundaries"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47033e-22, 0, 0 )
collision_mask = 2
gravity_scale = 0.0

[node name="RayCast" type="CollisionShape" parent="GameSpace/Boundaries/Player"]
transform = Transform( -1, 2.84217e-14, -8.74228e-08, 2.84217e-14, 1, 0, 8.74228e-08, -2.4847e-21, -1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Watermelon" type="MeshInstance" parent="GameSpace/Boundaries/Player"]
transform = Transform( 0.0446845, -0.992142, -0.116864, 0.354354, 0.125115, -0.926704, 0.934042, -1.87755e-06, 0.357161, 0, 0, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 3 )
material/1 = SubResource( 4 )

[node name="Hand" type="MeshInstance" parent="GameSpace/Boundaries/Player/Watermelon"]
transform = Transform( 0.136928, -0.0560146, -0.0247599, -0.0317031, -0.0129459, -0.146039, 0.0523985, 0.138545, -0.0236567, -0.283619, -0.586759, 0.798378 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Balloon" type="MeshInstance" parent="GameSpace/Boundaries/Player"]
transform = Transform( 5.99999, -7.93259e-13, 2.6226e-06, 8.71128e-13, 6, -4.51729e-12, -2.6226e-06, 1.41479e-12, 5.99999, 0, 0, 0 )
visible = false
mesh = ExtResource( 6 )
material/0 = null

[node name="Hand" type="MeshInstance" parent="GameSpace/Boundaries/Player/Balloon"]
transform = Transform( -0.00892681, -0.000559555, 0.0233453, 0.00339139, 0.0246968, 0.00188875, -0.0231044, 0.00384134, -0.00874264, 0.0494228, 0.153074, -0.0263583 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Target" parent="GameSpace/Boundaries" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -1.2 )
collision_layer = 2

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.950943, 0.0849509, -0.297473, 0, 0.961559, 0.274598, 0.309365, -0.261127, 0.914388, -4.87967, 9.413, 13.3031 )
light_energy = 4.0
spot_range = 26.8617
spot_angle = 37.5642

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.5, 10.148 )
size = 16.852

[node name="GUI" parent="." instance=ExtResource( 8 )]

[node name="FeedbackDisplay" parent="GUI/LeftPanel" index="3"]
visible = false

[node name="ConnectionMenu" parent="GUI/RightPanel" index="1"]
visible = false

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )
[connection signal="body_entered" from="GameSpace/Boundaries/Target" to="." method="_on_Target_body_entered"]
[connection signal="body_exited" from="GameSpace/Boundaries/Target" to="." method="_on_Target_body_exited"]

[editable path="GUI"]
