[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Games/up-down_game.gd" type="Script" id=1]
[ext_resource path="res://Meshes/toon_hand_palm.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Meshes/Watermelon.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Textures/Watermelon_02.png" type="Texture" id=4]
[ext_resource path="res://Textures/Watermelon_01.png" type="Texture" id=5]
[ext_resource path="res://Meshes/balloon_scene.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Actors/Target.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.5, 3.5, 1.5 )

[sub_resource type="SpatialMaterial" id=2]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource( 4 )
roughness = 0.0

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource( 5 )
roughness = 0.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.714844, 0.651798, 0.240143, 1 )
roughness = 0.0

[sub_resource type="CylinderMesh" id=5]
material = SubResource( 4 )
radial_segments = 16

[sub_resource type="SphereMesh" id=6]
radial_segments = 16
rings = 16

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.84668, 0.867188, 0.298096, 1 )
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.707031, 0.699695, 0.651794, 1 )
roughness = 0.0

[sub_resource type="CylinderMesh" id=9]
material = SubResource( 8 )
radial_segments = 16

[sub_resource type="SphereMesh" id=10]
radial_segments = 16
rings = 16

[sub_resource type="PlaneMesh" id=11]

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.726562, 0.720886, 0.720886, 1 )
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="ProceduralSky" id=13]
sky_top_color = Color( 0.339844, 1, 0.969055, 1 )
sky_horizon_color = Color( 0.400238, 0.633779, 0.839844, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
sun_energy = 16.0

[sub_resource type="Environment" id=14]
background_mode = 3
background_sky = SubResource( 13 )
background_color = Color( 0.771286, 0.958497, 0.972656, 1 )
ambient_light_color = Color( 0.707031, 0.979401, 1, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="GameSpace" type="Area" parent="."]
input_ray_pickable = false
collision_layer = 2
collision_mask = 2

[node name="Boundaries" type="CollisionShape" parent="GameSpace"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.14329, 0 )
shape = SubResource( 1 )

[node name="Hand" type="MeshInstance" parent="GameSpace/Boundaries"]
transform = Transform( -8.89898e-09, 0.0315421, 0.197497, -0.2, -5.6426e-08, 0, 5.57199e-08, -0.197497, 0.0315421, -8.47033e-22, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="RayCast" type="RayCast" parent="GameSpace/Boundaries/Hand"]
transform = Transform( -5, 2.2076e-06, -2.22475e-07, -2.21506e-06, -4.93743, 0.788554, 1.28472e-07, 0.788554, 4.93743, 0, 0.468246, -0.0747832 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 2

[node name="Watermelon" type="MeshInstance" parent="GameSpace/Boundaries/Hand"]
transform = Transform( -9.75531e-06, -5, 0, -4.33013, 8.44834e-06, -2.5, 2.5, -4.87765e-06, -4.33013, 16.6649, -0.745076, -0.438815 )
mesh = ExtResource( 3 )
material/0 = SubResource( 2 )
material/1 = SubResource( 3 )

[node name="Rope" type="MeshInstance" parent="GameSpace/Boundaries/Hand/Watermelon"]
transform = Transform( 0.00788552, 2.00644e-07, 0.0493743, -1.155e-08, 1.93776, 4.71662e-15, -0.0493743, -1.25631e-06, 0.00788552, 7.45058e-09, 2.67237, 0.0760433 )
mesh = SubResource( 5 )
material/0 = null

[node name="Knot" type="MeshInstance" parent="GameSpace/Boundaries/Hand/Watermelon"]
transform = Transform( 0.0252801, 0.0216512, 0.140387, 0.0102017, 0.0660506, -0.0486127, -0.147502, 0.00827902, 0.0206984, 0.108537, 1.12491, 0.0843731 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Balloon" type="MeshInstance" parent="GameSpace/Boundaries/Hand"]
transform = Transform( -1.33485e-06, -30, 8.35798e-06, 4.73132, -8.46391e-06, -29.6245, 29.6245, -1.91495e-12, 4.73132, -16.5225, -1.04935, -0.691122 )
visible = false
mesh = ExtResource( 6 )
material/0 = null

[node name="Thread" type="MeshInstance" parent="GameSpace/Boundaries/Hand/Balloon"]
transform = Transform( 0.000630844, 9.57381e-09, 0.00394994, -8.09403e-10, 0.3, 9.69397e-16, -0.00394994, -5.99455e-08, 0.000630844, 0.00653105, -0.48493, -0.00359753 )
mesh = SubResource( 9 )
material/0 = null

[node name="Knot" type="MeshInstance" parent="GameSpace/Boundaries/Hand/Balloon"]
transform = Transform( 0.00189854, -0.00226503, 0.0118874, 0.000773968, 0.00555605, 0.00484615, -0.0128373, -3.97861e-09, 0.00205024, 0.00923077, -0.193128, -0.00359755 )
mesh = SubResource( 10 )
material/0 = null

[node name="Target" parent="GameSpace/Boundaries" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.5, -2 )
collision_layer = 2

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.950943, 0.0849509, -0.297473, 0, 0.961559, 0.274598, 0.309365, -0.261127, 0.914388, -4.87967, 9.413, 13.3031 )
light_energy = 4.0
spot_range = 26.8617
spot_angle = 37.5642

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.18777, 11.773 )
size = 16.852

[node name="GUI" parent="." instance=ExtResource( 8 )]

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 14 )
[connection signal="game_timeout" from="GUI" to="." method="_on_GUI_game_timeout"]
[connection signal="game_toggle" from="GUI" to="." method="_on_GUI_game_toggle"]
